--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
-	"name": "fcc-learn-npm-package-json",
+	"name": "fcc-npm-tut",
+	"version": "0.0.1.SNAPSHOT",
+	"author": "cuongysl",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
