--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "fcc-npm-tut",
 	"version": "0.0.1.SNAPSHOT",
 	"author": "cuongysl",
+	"description": "just a test",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
